Some bugs fixed

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,13 +29,21 @@ dist.jar=${dist.dir}/barebone.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.gluegen-rt-natives-linux-amd64.jar=build/gluegen-rt-natives-linux-amd64.jar
+file.reference.gluegen-rt.jar=build/gluegen-rt.jar
 file.reference.jcommon-1.0.23.jar=build/jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19.jar=build/jfreechart-1.0.19.jar
+file.reference.jogl-all-natives-linux-amd64.jar=build/jogl-all-natives-linux-amd64.jar
+file.reference.jogl-all.jar=build/jogl-all.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcommon-1.0.23.jar}:\
-    ${file.reference.jfreechart-1.0.19.jar}
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.gluegen-rt-natives-linux-amd64.jar}:\
+    ${file.reference.gluegen-rt.jar}:\
+    ${file.reference.jogl-all-natives-linux-amd64.jar}:\
+    ${file.reference.jogl-all.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
